<?xml version="1.0"?>
<package>
  <name>drobot_control</name>
  <version>0.0.0</version>
  <description>The drobot_control package</description>

  <author email="xiongfengcai@gmail.com">Cai</author>

  <maintainer email="xiongfengcai@gmail.com">Cai</maintainer>

  <license>BSD</license>

  <url type="repository">https://github.com/NianxingTech/drobot</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
 <build_depend>std_msgs</build_depend>
  <build_depend>rosconsole</build_depend>
  <build_depend>roscpp_serialization</build_depend>
  <build_depend>rostime</build_depend>
  <build_depend>roslib</build_depend>
 <build_depend>tf</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <!-- <build_depend>tf2</build_depend>   -->
 
  <run_depend>rosconsole</run_depend>
  <run_depend>roscpp_serialization</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>rostime</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>

  <export>


  </export>
</package>
