<?xml version="1.0"?>
<package>
  <name>drobot_msgs</name>
  <version>0.2.7</version>
  <description>Messages for Drobot</description>

  <author email="xiongfengcai@gmail.com">Cai</author>

  <maintainer email="xiongfengcai@gmail.com">Cai</maintainer>

  <license>BSD</license>

  <url type="repository">https://github.com/NianxingTech/drobot</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>
  </export>
</package>
